2006-04-07 Alvaro del Castillo  <acs@barrapunto.com>

	* src/planner-usage-chart.c
	* src/planner-usage-chart.h
	* src/planner-usage-model.c
	* src/planner-usage-model.h
	* src/planner-usage-row.c
	* src/planner-usage-tree.h
	* src/planner-usage-view.c
	You can left click now in tasks and resources bars in resource usage 
	view canvas graph in order to select them and also, you can right
	click in them in order to edit them.

2006-04-02  Kjartan Maraas  <kmaraas@gnome.org>

	* src/planner-window.c: (window_do_save_as): Fix 
	NULL deref found by the coverity checker. Bug #334120.

2006-01-24  Clytie Siddall <clytie@riverland.net.au>

	* configure.in	Added vi in ALL_LINGUAS line.
	
	2005-09-14  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added fi to ALL_LINGUAS

2005-09-05  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "docs/user-guide/eu/Makefile" to AC_CONFIG_FILES.

2005-09-05  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" to ALL_LINGUAS.

2005-06-06  Kjartan Maraas  <kmaraas@gnome.org>


	* src/planner-resource-view.c: (resource_view_edit_columns_cb):
	Fix a typo in a string. Reported by Christian Rose. Closes bug
	#305598.

2005-05-24  Pawan chitrakar  <pawan@nplinux.org>

	* configure.in: Added ne in ALL_LINGUAS


2005-05-19  Richard Hult  <richard@imendio.com>

	* Commit makefiles for win32 and the last change to main for
	win32.

2005-05-18  Richard Hult  <richard@imendio.com>

	* docs/sql/README.sql: Patch from minus@toneby.com to improve
	this.

2005-04-30  Richard Hult  <richard@imendio.com>

	* src/planner-eds-plugin.c (plugin_init): Use the right path
	function and the right path.

2005-04-26  Richard Hult  <richard@imendio.com>

	* libplanner/mrp-application.c: (application_init_gettext):
	* libplanner/mrp-paths-gnome.c: (mrp_paths_get_sql_dir),
	(mrp_paths_get_locale_dir):
	* libplanner/mrp-paths-win32.c: (mrp_paths_get_file_modules_dir),
	(mrp_paths_get_sql_dir), (mrp_paths_get_locale_dir):