@@ -1,3 +1,9 @@
+2006-04-11 Alvaro del Castillo  <acs@barrapunto.com>
+
+	* src/planner-usage-row.c
+	Disable right click edit dialogs. Enable edit dialogs with
+	double left click. 
+
 2006-04-07 Alvaro del Castillo  <acs@barrapunto.com>
 
 	* src/planner-usage-chart.c
